Updating docs for Travis build: https://travis-ci.org/candrews/grails-jcaptcha-plugin/builds/27261165

--- a/gapi/allclasses-frame.html
+++ b/gapi/allclasses-frame.html
@@ -22,13 +22,13 @@ All Classes
 <TD NOWRAP><FONT CLASS="FrameItemFont">
 <!--<A HREF="org/omg/CORBA/ARG_IN.html" title="interface in org.omg.CORBA" target="classFrame"><I>ARG_IN</I></A>-->
 <!--<BR>-->
-<A HREF="DefaultPackage/JcaptchaController.html" title="class in JcaptchaController" target="classFrame">JcaptchaController</A>
+<A HREF="org/grails/plugin/jcaptcha/JcaptchaController.html" title="class in org.grails.plugin.jcaptcha" target="classFrame">JcaptchaController</A>
 <BR>
 <A HREF="DefaultPackage/JcaptchaGrailsPlugin.html" title="class in JcaptchaGrailsPlugin" target="classFrame">JcaptchaGrailsPlugin</A>
 <BR>
-<A HREF="DefaultPackage/JcaptchaService.html" title="class in JcaptchaService" target="classFrame">JcaptchaService</A>
+<A HREF="org/grails/plugin/jcaptcha/JcaptchaService.html" title="class in org.grails.plugin.jcaptcha" target="classFrame">JcaptchaService</A>
 <BR>
-<A HREF="DefaultPackage/JcaptchaTagLib.html" title="class in JcaptchaTagLib" target="classFrame">JcaptchaTagLib</A>
+<A HREF="org/grails/plugin/jcaptcha/JcaptchaTagLib.html" title="class in org.grails.plugin.jcaptcha" target="classFrame">JcaptchaTagLib</A>
 <BR>
 
 	  
