--- a/gapi/DefaultPackage/package-frame.html
+++ b/gapi/DefaultPackage/package-frame.html
@@ -23,7 +23,7 @@ DefaultPackage
 <TR>
 <TD NOWRAP><FONT size="+1" CLASS="FrameHeadingFont">
 Classes</FONT>&nbsp;
-<FONT CLASS="FrameItemFont"><BR><A HREF="JcaptchaController.html" title="class in DefaultPackage" target="classFrame">JcaptchaController</A><BR><A HREF="JcaptchaGrailsPlugin.html" title="class in DefaultPackage" target="classFrame">JcaptchaGrailsPlugin</A><BR><A HREF="JcaptchaService.html" title="class in DefaultPackage" target="classFrame">JcaptchaService</A><BR><A HREF="JcaptchaTagLib.html" title="class in DefaultPackage" target="classFrame">JcaptchaTagLib</A></FONT></TD>
+<FONT CLASS="FrameItemFont"><BR><A HREF="JcaptchaGrailsPlugin.html" title="class in DefaultPackage" target="classFrame">JcaptchaGrailsPlugin</A></FONT></TD>
 </TR>
 </TABLE>
 
