--- a/gapi/overview-frame.html
+++ b/gapi/overview-frame.html
@@ -31,6 +31,9 @@ Packages</FONT>
 <FONT CLASS="FrameItemFont"><A HREF="DefaultPackage/package-frame.html" target="packageFrame">DefaultPackage</A></FONT>
 <BR>
 
+<FONT CLASS="FrameItemFont"><A HREF="org/grails/plugin/jcaptcha/package-frame.html" target="packageFrame">org.grails.plugin.jcaptcha</A></FONT>
+<BR>
+
 </TD>
 </TR>
 </TABLE>
