--- a/gapi/overview-summary.html
+++ b/gapi/overview-summary.html
@@ -89,6 +89,11 @@ Groovy Documentation</h1>
 <TD></TD>
 </TR>
 
+<TR BGCOLOR="white" CLASS="TableRowColor">
+<TD WIDTH="20%"><B><A HREF="org/grails/plugin/jcaptcha/package-summary.html">org.grails.plugin.jcaptcha</A></B></TD>
+<TD></TD>
+</TR>
+
 </TABLE>
 
 <P>
