--- a/gapi/org/grails/plugin/jcaptcha/package-frame.html
+++ b/gapi/org/grails/plugin/jcaptcha/package-frame.html
@@ -1,38 +1,38 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
-<HTML>
-<HEAD>
-<TITLE>
-org.grails.plugin.jcaptcha
-</TITLE>
+<html>
+<head>
+    <title>org.grails.plugin.jcaptcha</title>
+    
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta name="keywords" CONTENT="org/grails/plugin/jcaptcha package">
 
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<META NAME="keywords" CONTENT="org/grails/plugin/jcaptcha package">
+    <link href="groovy.ico" type="image/x-icon" rel="shortcut icon">
+    <link href="groovy.ico" type="image/x-icon" rel="icon">
+    <link rel="stylesheet" type="text/css" href="../../../../stylesheet.css" title="Style">
+</head>
 
-<LINK REL ="stylesheet" TYPE="text/css" HREF="../../../../stylesheet.css" TITLE="Style">
-
-</HEAD>
-
-<BODY BGCOLOR="white">
-<FONT size="+1" CLASS="FrameTitleFont">
-<A HREF="package-summary.html" target="classFrame">org.grails.plugin.jcaptcha</A></FONT>
-
-
+<body class="left">
+<div class="indexHeader">
+    <b><a href="package-summary.html" target="classFrame">org.grails.plugin.jcaptcha</a></b>
+</div>
 
 
-<TABLE BORDER="0" WIDTH="100%" SUMMARY="">
-<TR>
-<TD NOWRAP><FONT size="+1" CLASS="FrameHeadingFont">
-Classes</FONT>&nbsp;
-<FONT CLASS="FrameItemFont"><BR><A HREF="JcaptchaController.html" title="class in org.grails.plugin.jcaptcha" target="classFrame">JcaptchaController</A><BR><A HREF="JcaptchaService.html" title="class in org.grails.plugin.jcaptcha" target="classFrame">JcaptchaService</A><BR><A HREF="JcaptchaTagLib.html" title="class in org.grails.plugin.jcaptcha" target="classFrame">JcaptchaTagLib</A></FONT></TD>
-</TR>
-</TABLE>
 
 
+
+<div class="indexContainer">
+    <h2>Classes</h2>
+    <ul>
+        <li><a href="JcaptchaController.html" title="class in org.grails.plugin.jcaptcha" target="classFrame">JcaptchaController</a></li><li><a href="JcaptchaService.html" title="class in org.grails.plugin.jcaptcha" target="classFrame">JcaptchaService</a></li><li><a href="JcaptchaTagLib.html" title="class in org.grails.plugin.jcaptcha" target="classFrame">JcaptchaTagLib</a></li>
+    </ul>
+</div>
 
 
 
 
 
 
-</BODY>
-</HTML>
+
+
+</body>
+</html>
